apps/base/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  labels:
    app.kubernetes.io/name: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      serviceAccountName: readarr
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      # securityContext:
      #   fsGroup: 33
      #   runAsUser: 33
      #   runAsGroup: 33
      containers:
      - name: readarr
        image: linuxserver/readarr:amd64-nightly@sha256:eb37f58646a901dc7727cf448cae36daaefaba79de33b5058dab79aa4c04aefb
        ports:
        - name: http
          containerPort: 8787
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: data
          mountPath: /config
          subPath: config
        - name: calibre-config
          mountPath: /calibre
          subPath: config
        - name: media
          mountPath: /books
          subPath: eBooks
        - name: sabnzbd-downloads
          mountPath: /downloads
          subPath: downloads
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: readarr-claim
      - name: media
        persistentVolumeClaim:
          claimName: media-claim
      - name: sabnzbd-downloads
        persistentVolumeClaim:
          claimName: sabnzbd-data-claim
      - name: calibre-config
        persistentVolumeClaim:
          claimName: calibre-data-claim
