apps/base/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: readarr
  labels:
    app.kubernetes.io/name: readarr
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8787
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: readarr
