apps/base/readarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
  namespace: readarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`readarr.cruznet.io`)
    kind: Rule
    services:
    - name: readarr
      kind: Service
      port: 8787
  tls:
    secretName: readarr-cert
